--- a/style.css
+++ b/style.css
@@ -1,8 +1,21 @@
 body {
+    color: white;
+    margin: 0;
+}
+.background{
     background-image: linear-gradient(to bottom right, #31345f, #18104f);
     background-repeat: no-repeat;
-    background-attachment: fixed;
-    color: white;
+    background-position: center;
+    position: fixed;
+    height: 100vh;
+    width: 100vw;
+}
+.content{
+    position: absolute;
+    margin-top: 5rem;
+    left: 50%; 
+    transform: translateX(-50%);
+    width: 80%;
 }
 #header{
     color: white;
